--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     <header id="header" class="bg-indigo-imperial bg-opacity-80 backdrop-blur-md fixed top-0 left-0 right-0 z-50 transition-shadow duration-300 shadow-md">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-xl font-bold text-dourado-prestigio">SEU NOME</a>
+            <a href="#" class="text-xl font-bold text-dourado-prestigio">TUCK</a>
             <nav class="hidden md:flex space-x-8">
                 <a href="#portfolio" class="hover:text-violeta-eletrico transition-colors">Trabalhos</a>
                 <a href="#servicos" class="hover:text-violeta-eletrico transition-colors">Serviços</a>
@@ -225,7 +225,7 @@
             <div class="container mx-auto px-6">
                 <div class="flex flex-col md:flex-row items-center gap-12">
                     <div class="md:w-1/3">
-                        <img src="https://placehold.co/600x600/333333/f0e6ff?text=Sua+Foto" alt="Foto profissional" class="rounded-lg shadow-2xl w-full">
+                        <img src="https://placehold.co/600x600/333333/f0e6ff?text=Foto" alt="Foto profissional" class="rounded-lg shadow-2xl w-full">
                     </div>
                     <div class="md:w-2/3">
                         <h2 class="text-3xl md:text-4xl font-bold mb-6">Mais que um designer, <br><span class="text-dourado-prestigio">um parceiro estratégico.</span></h2>
@@ -250,7 +250,7 @@
 
     <footer class="bg-indigo-imperial border-t border-cinza-chumbo py-8">
         <div class="container mx-auto px-6 text-center text-lavanda-palida opacity-70">
-            <p>&copy; 2025 Seu Nome. Todos os direitos reservados.</p>
+            <p>&copy; 2025 Tuck. Todos os direitos reservados.</p>
             <p class="text-sm mt-2">Design e Desenvolvimento com 💜</p>
         </div>
     </footer>
