--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <main>
         <section id="home" class="relative min-h-screen flex items-center justify-center text-center overflow-hidden">
-            <canvas id="hero-canvas" style="background-image:url('./src/2arvereflo.png'); background-size: cover; background-position: center; background-repeat: no-repeat;"></canvas>
+            <canvas id="hero-canvas"></canvas>
             <div class="relative z-10 p-6">
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">
                     <span class="text-dourado-prestigio">Sua Marca, Elevada.</span><br>
@@ -50,9 +50,7 @@
             </div>
         </section>
 
-        <section id="pain" class="scroll-target bg-cinza-chumbo py-20 md:py-32 fade-in-section"
-        style="background-image:linear-gradient(rgba(51, 51, 51, 0.9), rgba(51, 51, 51, 0.9)), url('./src/Metal3.png');
-                background-size: contain; background-position: center; background-color: #333333;">
+        <section id="pain" class="scroll-target bg-cinza-chumbo py-20 md:py-32 fade-in-section">
                 <div class="container mx-auto px-6 text-center">
                     <h2 class="text-3xl md:text-4xl font-bold mb-4">Sua empresa não é vista como deveria?</h2>
                     <p class="max-w-3xl mx-auto text-lg mb-12 text-lavanda-palida opacity-90">Muitos negócios incríveis se perdem com uma imagem que não transmite sua verdadeira qualidade. Uma identidade visual fraca é uma barreira para o crescimento.</p>
@@ -86,7 +84,6 @@
                     </p>
                 </div>
         </section>
-
         <section id="servicos" class="scroll-target py-20 md:py-32 fade-in-section">
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl md:text-4xl font-bold text-center mb-12">Soluções Estratégicas para sua Marca</h2>
